--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>This is jerins git tutorial</title>
     </head>
     <body>
-        This is how we can add things to the git repository frpm the command prompt. or using git bash.
+        <h1>hi,</h1>
+        This is how we can add things to the git repository from the command prompt. or using git bash.
     </body>
 </html>
